--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,5 +2,7 @@ FROM python:3.10
 WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+# Copy the rest of the application files
 COPY . .
+ENV PYTHONPATH=/app
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
