--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
         condition: service_healthy
     volumes:
       - ./frontend/assets:/app/frontend/assets
+      - ./backend/uploads:/app/uploads
     networks:
       - harmony_network
 
