--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,15 @@ jobs:
         with:
           python-version: "3.10"
 
+
+      - name: Create missing assets directory
+        run: mkdir -p frontend/assets
+
+
+      - name: Start all Docker containers
+        run: docker-compose up -d
+
+
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
