--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,15 +13,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:13
-        env:
-          POSTGRES_USER: harmony_user
-          POSTGRES_PASSWORD: password
-          POSTGRES_DB: harmony_db
-        ports:
-          - "5432:5432"
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -31,19 +23,21 @@ jobs:
         with:
           python-version: "3.10"
 
+      - name: Install Docker Compose  
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
 
       - name: Create missing assets directory
         run: mkdir -p frontend/assets
 
-
       - name: Start all Docker containers
         run: docker-compose up -d
 
-
       - name: Install Dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r backend/requirements.txt
+          cd backend
+          pip install -r requirements.txt
 
       - name: Run Tests
         run: |
