--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,16 +23,25 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install Docker Compose
+      - name: Set up Docker
         run: |
           sudo apt-get update
-          sudo apt-get install -y docker-compose
+          sudo apt-get install -y docker.io
 
-      - name: Create missing assets directory  
-        run: mkdir -p frontend/assets
+      - name: Create missing assets directory
+        run: |
+          mkdir -p frontend/assets
+          touch frontend/assets/.gitkeep
+
+      - name: Ensure docker-compose.yml is in place
+        run: |
+          mv docker-compose.yml backend/docker-compose.yml || true
 
       - name: Start all Docker containers
         run: docker-compose up -d
+
+      - name: Wait for Database
+        run: sleep 10
 
       - name: Install Dependencies
         run: |
