--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,8 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./backup.sql:/docker-entrypoint-initdb.d/backup.sql
+      - ./backup.sql:/docker-entrypoint-initdb.d/01-backup.sql
+      - ./init.sql:/docker-entrypoint-initdb.d/99-init.sql
 
     networks:
       - harmony_network
